Grace/tests/gibbs/errors/t270.grace
// ERROR = P1040
if((6 * 9) == 42) then {
    print "So long and thanks for all the fish"
} else
    print "I'm not a refrigerator"
}
